--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "common",
+  "name": "db",
   "module": "index.ts",
   "type": "module",
   "private": true,
   "exports": {
-    "./types": "./types.ts"
+    ".": "./index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
@@ -13,6 +13,7 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "zod": "^3.24.2"
+    "@prisma/client": "^6.5.0",
+    "prisma": "^6.5.0"
   }
 }
