--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,13 +8,25 @@
   },
   "scripts": {
     "dev": "bun run index.ts"
-    
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.6",
+    "@clerk/nextjs": "^6.11.2",
+    "@fal-ai/client": "^1.2.3",
+    "@neondatabase/serverless": "^0.10.4",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
-    "express": "^4.21.2"
+    "aws-sdk": "^2.1692.0",
+    "common": "workspace:*",
+    "cors": "^2.8.5",
+    "db": "workspace:*",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "razorpay": "^2.9.5",
+    "stripe": "^17.6.0",
+    "svix": "^1.57.0"
   }
 }
