--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "prettier": "^3.5.3",
+    "prisma": "^6.5.0",
     "turbo": "^2.4.4",
     "typescript": "5.8.2"
   },
