--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-tabs": "^1.1.3",
+    "@splinetool/react-spline": "^4.0.0",
     "jszip": "^3.10.1",
     "next": "15.2.3",
     "react": "^19.0.0",
