refactor: remove common and db packages along with their configurations and files to streamline the project structure

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,9 +20,9 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "aws-sdk": "^2.1692.0",
-    "common": "workspace:*",
+    "common": "*",
     "cors": "^2.8.5",
-    "db": "workspace:*",
+    "db": "*",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "razorpay": "^2.9.5",
