--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -26,5 +26,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "@eslint/eslintrc": "^3"
-  }
+  },
+  "postinstall": "prisma generate"
+
 }
