--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,6 +7,7 @@
     "@types/bun": "latest"
   },
   "scripts": {
+    "build": "bun build index.ts --outdir=dist --target=bun",
     "dev": "bun run index.ts"
   },
   "peerDependencies": {
