--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.91.8",
     "@radix-ui/react-tabs": "^1.1.3",
     "@splinetool/react-spline": "^4.0.0",
     "jszip": "^3.10.1",
